spiveyt.output
Terminals unused in grammar

   T_UNKNOWN
   T_ASSIGN
   T_SEMICOLON
   T_LBRACE
   T_RBRACE
   T_COMMENT
   T_POUND


State 1 conflicts: 2 shift/reduce, 1 reduce/reduce
State 52 conflicts: 1 shift/reduce
State 135 conflicts: 1 reduce/reduce


Grammar

    0 $accept: N_START $end

    1 N_START: N_EXPR

    2 N_EXPR: N_IF_EXPR
    3       | N_WHILE_EXPR
    4       | N_FOR_EXPR
    5       | N_COMPOUND_EXPR
    6       | N_ARITHLOGIC_EXPR
    7       | N_ASSIGNMENT_EXPR
    8       | N_OUTPUT_EXPR
    9       | N_INPUT_EXPR
   10       | N_LIST_EXPR
   11       | N_FUNCTION_DEF
   12       | N_FUNCTION_CALL
   13       | N_QUIT_EXPR

   14 N_CONST: T_INTCONST
   15        | T_STRCONST
   16        | T_FLOATCONST
   17        | T_TRUE
   18        | T_FALSE

   19 N_COMPOUND_EXPR: T_LBRACKET N_EXPR N_EXPR_LIST T_RBRACKET

   20 N_EXPR_LIST: N_EXPR N_EXPR_LIST
   21            | %empty

   22 N_IF_EXPR: T_IF T_LPAREN N_EXPR T_RPAREN N_EXPR
   23          | T_IF T_LPAREN N_EXPR T_RPAREN N_EXPR T_ELSE N_EXPR

   24 N_WHILE_EXPR: T_WHILE T_LPAREN N_EXPR T_RPAREN N_LOOP_EXPR

   25 N_FOR_EXPR: T_FOR T_LPAREN T_IDENT T_IN N_EXPR T_RPAREN N_LOOP_EXPR

   26 N_LOOP_EXPR: N_EXPR
   27            | N_BREAK_EXPR
   28            | N_NEXT_EXPR

   29 N_BREAK_EXPR: T_BREAK

   30 N_NEXT_EXPR: T_NEXT

   31 N_LIST_EXPR: T_LIST T_LPAREN N_CONST_LIST T_RPAREN

   32 N_CONST_LIST: N_CONST T_COMMA N_CONST_LIST
   33             | N_CONST

   34 N_ASSIGNMENT_EXPR: T_IDENT N_INDEX T_EQ N_EXPR

   35 N_INDEX: T_LBRACKET T_LBRACKET N_EXPR T_RBRACKET T_RBRACKET
   36        | %empty

   37 N_QUIT_EXPR: T_QUIT T_LPAREN T_RPAREN

   38 N_OUTPUT_EXPR: T_PRINT T_LPAREN N_EXPR T_RPAREN
   39              | T_CAT T_LPAREN N_EXPR T_RPAREN

   40 N_INPUT_EXPR: T_READ T_LPAREN N_VAR T_RPAREN

   41 N_FUNCTION_DEF: T_FUNCTION T_LPAREN N_PARAM_LIST T_RPAREN N_COMPOUND_EXPR

   42 N_PARAM_LIST: N_PARAMS
   43             | N_NO_PARAMS

   44 N_NO_PARAMS: %empty

   45 N_PARAMS: T_IDENT
   46         | T_IDENT T_COMMA N_PARAMS

   47 N_FUNCTION_CALL: T_IDENT T_LPAREN N_ARG_LIST T_RPAREN

   48 N_ARG_LIST: N_ARGS
   49           | N_NO_ARGS

   50 N_NO_ARGS: %empty

   51 N_ARGS: N_EXPR
   52       | N_EXPR T_COMMA N_ARGS

   53 N_ARITHLOGIC_EXPR: N_SIMPLE_ARITHLOGIC
   54                  | N_SIMPLE_ARITHLOGIC N_REL_OP N_SIMPLE_ARITHLOGIC

   55 N_SIMPLE_ARITHLOGIC: N_TERM N_ADD_OP_LIST

   56 N_ADD_OP_LIST: N_ADD_OP N_TERM N_ADD_OP_LIST
   57              | %empty

   58 N_TERM: N_FACTOR N_MULT_OP_LIST

   59 N_MULT_OP_LIST: N_MULT_OP N_FACTOR N_MULT_OP_LIST
   60               | %empty

   61 N_FACTOR: N_VAR
   62         | N_CONST
   63         | T_LPAREN N_EXPR T_RPAREN
   64         | T_NOT N_FACTOR

   65 N_ADD_OP: T_ADD
   66         | T_SUB
   67         | T_OR

   68 N_MULT_OP: T_MULT
   69          | T_DIV
   70          | T_AND
   71          | T_MOD
   72          | T_POW

   73 N_REL_OP: T_LT
   74         | T_GT
   75         | T_LE
   76         | T_GE
   77         | T_EQ
   78         | T_NE

   79 N_VAR: N_ENTIRE_VAR
   80      | N_SINGLE_ELEMENT

   81 N_SINGLE_ELEMENT: T_IDENT T_LBRACKET T_LBRACKET N_EXPR T_RBRACKET T_RBRACKET

   82 N_ENTIRE_VAR: T_IDENT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_IDENT (258) 25 34 45 46 47 81 82
T_INTCONST (259) 14
T_UNKNOWN (260)
T_FLOATCONST (261) 16
T_IF (262) 22 23
T_WHILE (263) 24
T_FUNCTION (264) 41
T_FOR (265) 25
T_IN (266) 25
T_NEXT (267) 30
T_BREAK (268) 29
T_TRUE (269) 17
T_FALSE (270) 18
T_QUIT (271) 37
T_PRINT (272) 38
T_CAT (273) 39
T_READ (274) 40
T_LIST (275) 31
T_STRCONST (276) 15
T_ADD (277) 65
T_SUB (278) 66
T_MULT (279) 68
T_DIV (280) 69
T_MOD (281) 71
T_POW (282) 72
T_LT (283) 73
T_GT (284) 74
T_LE (285) 75
T_GE (286) 76
T_EQ (287) 34 77
T_NE (288) 78
T_NOT (289) 64
T_AND (290) 70
T_OR (291) 67
T_ASSIGN (292)
T_SEMICOLON (293)
T_COMMA (294) 32 46 52
T_LPAREN (295) 22 23 24 25 31 37 38 39 40 41 47 63
T_LBRACE (296)
T_RBRACE (297)
T_LBRACKET (298) 19 35 81
T_RBRACKET (299) 19 35 81
T_COMMENT (300)
T_POUND (301)
T_RPAREN (302) 22 23 24 25 31 37 38 39 40 41 47 63
T_ELSE (303) 23


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
N_START (50)
    on left: 1, on right: 0
N_EXPR (51)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13, on right: 1 19 20 22 23 24
    25 26 34 35 38 39 51 52 63 81
N_CONST (52)
    on left: 14 15 16 17 18, on right: 32 33 62
N_COMPOUND_EXPR (53)
    on left: 19, on right: 5 41
N_EXPR_LIST (54)
    on left: 20 21, on right: 19 20
N_IF_EXPR (55)
    on left: 22 23, on right: 2
N_WHILE_EXPR (56)
    on left: 24, on right: 3
N_FOR_EXPR (57)
    on left: 25, on right: 4
N_LOOP_EXPR (58)
    on left: 26 27 28, on right: 24 25
N_BREAK_EXPR (59)
    on left: 29, on right: 27
N_NEXT_EXPR (60)
    on left: 30, on right: 28
N_LIST_EXPR (61)
    on left: 31, on right: 10
N_CONST_LIST (62)
    on left: 32 33, on right: 31 32
N_ASSIGNMENT_EXPR (63)
    on left: 34, on right: 7
N_INDEX (64)
    on left: 35 36, on right: 34
N_QUIT_EXPR (65)
    on left: 37, on right: 13
N_OUTPUT_EXPR (66)
    on left: 38 39, on right: 8
N_INPUT_EXPR (67)
    on left: 40, on right: 9
N_FUNCTION_DEF (68)
    on left: 41, on right: 11
N_PARAM_LIST (69)
    on left: 42 43, on right: 41
N_NO_PARAMS (70)
    on left: 44, on right: 43
N_PARAMS (71)
    on left: 45 46, on right: 42 46
N_FUNCTION_CALL (72)
    on left: 47, on right: 12
N_ARG_LIST (73)
    on left: 48 49, on right: 47
N_NO_ARGS (74)
    on left: 50, on right: 49
N_ARGS (75)
    on left: 51 52, on right: 48 52
N_ARITHLOGIC_EXPR (76)
    on left: 53 54, on right: 6
N_SIMPLE_ARITHLOGIC (77)
    on left: 55, on right: 53 54
N_ADD_OP_LIST (78)
    on left: 56 57, on right: 55 56
N_TERM (79)
    on left: 58, on right: 55 56
N_MULT_OP_LIST (80)
    on left: 59 60, on right: 58 59
N_FACTOR (81)
    on left: 61 62 63 64, on right: 58 59 64
N_ADD_OP (82)
    on left: 65 66 67, on right: 56
N_MULT_OP (83)
    on left: 68 69 70 71 72, on right: 59
N_REL_OP (84)
    on left: 73 74 75 76 77 78, on right: 54
N_VAR (85)
    on left: 79 80, on right: 40 61
N_SINGLE_ELEMENT (86)
    on left: 81, on right: 80
N_ENTIRE_VAR (87)
    on left: 82, on right: 79


State 0

    0 $accept: . N_START $end

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    N_START              go to state 19
    N_EXPR               go to state 20
    N_CONST              go to state 21
    N_COMPOUND_EXPR      go to state 22
    N_IF_EXPR            go to state 23
    N_WHILE_EXPR         go to state 24
    N_FOR_EXPR           go to state 25
    N_LIST_EXPR          go to state 26
    N_ASSIGNMENT_EXPR    go to state 27
    N_QUIT_EXPR          go to state 28
    N_OUTPUT_EXPR        go to state 29
    N_INPUT_EXPR         go to state 30
    N_FUNCTION_DEF       go to state 31
    N_FUNCTION_CALL      go to state 32
    N_ARITHLOGIC_EXPR    go to state 33
    N_SIMPLE_ARITHLOGIC  go to state 34
    N_TERM               go to state 35
    N_FACTOR             go to state 36
    N_VAR                go to state 37
    N_SINGLE_ELEMENT     go to state 38
    N_ENTIRE_VAR         go to state 39


State 1

   34 N_ASSIGNMENT_EXPR: T_IDENT . N_INDEX T_EQ N_EXPR
   47 N_FUNCTION_CALL: T_IDENT . T_LPAREN N_ARG_LIST T_RPAREN
   81 N_SINGLE_ELEMENT: T_IDENT . T_LBRACKET T_LBRACKET N_EXPR T_RBRACKET T_RBRACKET
   82 N_ENTIRE_VAR: T_IDENT .

    T_LPAREN    shift, and go to state 40
    T_LBRACKET  shift, and go to state 41

    T_EQ        reduce using rule 36 (N_INDEX)
    T_EQ        [reduce using rule 82 (N_ENTIRE_VAR)]
    T_LPAREN    [reduce using rule 82 (N_ENTIRE_VAR)]
    T_LBRACKET  [reduce using rule 82 (N_ENTIRE_VAR)]
    $default    reduce using rule 82 (N_ENTIRE_VAR)

    N_INDEX  go to state 42


State 2

   14 N_CONST: T_INTCONST .

    $default  reduce using rule 14 (N_CONST)


State 3

   16 N_CONST: T_FLOATCONST .

    $default  reduce using rule 16 (N_CONST)


State 4

   22 N_IF_EXPR: T_IF . T_LPAREN N_EXPR T_RPAREN N_EXPR
   23          | T_IF . T_LPAREN N_EXPR T_RPAREN N_EXPR T_ELSE N_EXPR

    T_LPAREN  shift, and go to state 43


State 5

   24 N_WHILE_EXPR: T_WHILE . T_LPAREN N_EXPR T_RPAREN N_LOOP_EXPR

    T_LPAREN  shift, and go to state 44


State 6

   41 N_FUNCTION_DEF: T_FUNCTION . T_LPAREN N_PARAM_LIST T_RPAREN N_COMPOUND_EXPR

    T_LPAREN  shift, and go to state 45


State 7

   25 N_FOR_EXPR: T_FOR . T_LPAREN T_IDENT T_IN N_EXPR T_RPAREN N_LOOP_EXPR

    T_LPAREN  shift, and go to state 46


State 8

   17 N_CONST: T_TRUE .

    $default  reduce using rule 17 (N_CONST)


State 9

   18 N_CONST: T_FALSE .

    $default  reduce using rule 18 (N_CONST)


State 10

   37 N_QUIT_EXPR: T_QUIT . T_LPAREN T_RPAREN

    T_LPAREN  shift, and go to state 47


State 11

   38 N_OUTPUT_EXPR: T_PRINT . T_LPAREN N_EXPR T_RPAREN

    T_LPAREN  shift, and go to state 48


State 12

   39 N_OUTPUT_EXPR: T_CAT . T_LPAREN N_EXPR T_RPAREN

    T_LPAREN  shift, and go to state 49


State 13

   40 N_INPUT_EXPR: T_READ . T_LPAREN N_VAR T_RPAREN

    T_LPAREN  shift, and go to state 50


State 14

   31 N_LIST_EXPR: T_LIST . T_LPAREN N_CONST_LIST T_RPAREN

    T_LPAREN  shift, and go to state 51


State 15

   15 N_CONST: T_STRCONST .

    $default  reduce using rule 15 (N_CONST)


State 16

   64 N_FACTOR: T_NOT . N_FACTOR

    T_IDENT       shift, and go to state 52
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17

    N_CONST           go to state 21
    N_FACTOR          go to state 53
    N_VAR             go to state 37
    N_SINGLE_ELEMENT  go to state 38
    N_ENTIRE_VAR      go to state 39


State 17

   63 N_FACTOR: T_LPAREN . N_EXPR T_RPAREN

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    N_EXPR               go to state 54
    N_CONST              go to state 21
    N_COMPOUND_EXPR      go to state 22
    N_IF_EXPR            go to state 23
    N_WHILE_EXPR         go to state 24
    N_FOR_EXPR           go to state 25
    N_LIST_EXPR          go to state 26
    N_ASSIGNMENT_EXPR    go to state 27
    N_QUIT_EXPR          go to state 28
    N_OUTPUT_EXPR        go to state 29
    N_INPUT_EXPR         go to state 30
    N_FUNCTION_DEF       go to state 31
    N_FUNCTION_CALL      go to state 32
    N_ARITHLOGIC_EXPR    go to state 33
    N_SIMPLE_ARITHLOGIC  go to state 34
    N_TERM               go to state 35
    N_FACTOR             go to state 36
    N_VAR                go to state 37
    N_SINGLE_ELEMENT     go to state 38
    N_ENTIRE_VAR         go to state 39


State 18

   19 N_COMPOUND_EXPR: T_LBRACKET . N_EXPR N_EXPR_LIST T_RBRACKET

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    N_EXPR               go to state 55
    N_CONST              go to state 21
    N_COMPOUND_EXPR      go to state 22
    N_IF_EXPR            go to state 23
    N_WHILE_EXPR         go to state 24
    N_FOR_EXPR           go to state 25
    N_LIST_EXPR          go to state 26
    N_ASSIGNMENT_EXPR    go to state 27
    N_QUIT_EXPR          go to state 28
    N_OUTPUT_EXPR        go to state 29
    N_INPUT_EXPR         go to state 30
    N_FUNCTION_DEF       go to state 31
    N_FUNCTION_CALL      go to state 32
    N_ARITHLOGIC_EXPR    go to state 33
    N_SIMPLE_ARITHLOGIC  go to state 34
    N_TERM               go to state 35
    N_FACTOR             go to state 36
    N_VAR                go to state 37
    N_SINGLE_ELEMENT     go to state 38
    N_ENTIRE_VAR         go to state 39


State 19

    0 $accept: N_START . $end

    $end  shift, and go to state 56


State 20

    1 N_START: N_EXPR .

    $default  reduce using rule 1 (N_START)


State 21

   62 N_FACTOR: N_CONST .

    $default  reduce using rule 62 (N_FACTOR)


State 22

    5 N_EXPR: N_COMPOUND_EXPR .

    $default  reduce using rule 5 (N_EXPR)


State 23

    2 N_EXPR: N_IF_EXPR .

    $default  reduce using rule 2 (N_EXPR)


State 24

    3 N_EXPR: N_WHILE_EXPR .

    $default  reduce using rule 3 (N_EXPR)


State 25

    4 N_EXPR: N_FOR_EXPR .

    $default  reduce using rule 4 (N_EXPR)


State 26

   10 N_EXPR: N_LIST_EXPR .

    $default  reduce using rule 10 (N_EXPR)


State 27

    7 N_EXPR: N_ASSIGNMENT_EXPR .

    $default  reduce using rule 7 (N_EXPR)


State 28

   13 N_EXPR: N_QUIT_EXPR .

    $default  reduce using rule 13 (N_EXPR)


State 29

    8 N_EXPR: N_OUTPUT_EXPR .

    $default  reduce using rule 8 (N_EXPR)


State 30

    9 N_EXPR: N_INPUT_EXPR .

    $default  reduce using rule 9 (N_EXPR)


State 31

   11 N_EXPR: N_FUNCTION_DEF .

    $default  reduce using rule 11 (N_EXPR)


State 32

   12 N_EXPR: N_FUNCTION_CALL .

    $default  reduce using rule 12 (N_EXPR)


State 33

    6 N_EXPR: N_ARITHLOGIC_EXPR .

    $default  reduce using rule 6 (N_EXPR)


State 34

   53 N_ARITHLOGIC_EXPR: N_SIMPLE_ARITHLOGIC .
   54                  | N_SIMPLE_ARITHLOGIC . N_REL_OP N_SIMPLE_ARITHLOGIC

    T_LT  shift, and go to state 57
    T_GT  shift, and go to state 58
    T_LE  shift, and go to state 59
    T_GE  shift, and go to state 60
    T_EQ  shift, and go to state 61
    T_NE  shift, and go to state 62

    $default  reduce using rule 53 (N_ARITHLOGIC_EXPR)

    N_REL_OP  go to state 63


State 35

   55 N_SIMPLE_ARITHLOGIC: N_TERM . N_ADD_OP_LIST

    T_ADD  shift, and go to state 64
    T_SUB  shift, and go to state 65
    T_OR   shift, and go to state 66

    $default  reduce using rule 57 (N_ADD_OP_LIST)

    N_ADD_OP_LIST  go to state 67
    N_ADD_OP       go to state 68


State 36

   58 N_TERM: N_FACTOR . N_MULT_OP_LIST

    T_MULT  shift, and go to state 69
    T_DIV   shift, and go to state 70
    T_MOD   shift, and go to state 71
    T_POW   shift, and go to state 72
    T_AND   shift, and go to state 73

    $default  reduce using rule 60 (N_MULT_OP_LIST)

    N_MULT_OP_LIST  go to state 74
    N_MULT_OP       go to state 75


State 37

   61 N_FACTOR: N_VAR .

    $default  reduce using rule 61 (N_FACTOR)


State 38

   80 N_VAR: N_SINGLE_ELEMENT .

    $default  reduce using rule 80 (N_VAR)


State 39

   79 N_VAR: N_ENTIRE_VAR .

    $default  reduce using rule 79 (N_VAR)


State 40

   47 N_FUNCTION_CALL: T_IDENT T_LPAREN . N_ARG_LIST T_RPAREN

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    $default  reduce using rule 50 (N_NO_ARGS)

    N_EXPR               go to state 76
    N_CONST              go to state 21
    N_COMPOUND_EXPR      go to state 22
    N_IF_EXPR            go to state 23
    N_WHILE_EXPR         go to state 24
    N_FOR_EXPR           go to state 25
    N_LIST_EXPR          go to state 26
    N_ASSIGNMENT_EXPR    go to state 27
    N_QUIT_EXPR          go to state 28
    N_OUTPUT_EXPR        go to state 29
    N_INPUT_EXPR         go to state 30
    N_FUNCTION_DEF       go to state 31
    N_FUNCTION_CALL      go to state 32
    N_ARG_LIST           go to state 77
    N_NO_ARGS            go to state 78
    N_ARGS               go to state 79
    N_ARITHLOGIC_EXPR    go to state 33
    N_SIMPLE_ARITHLOGIC  go to state 34
    N_TERM               go to state 35
    N_FACTOR             go to state 36
    N_VAR                go to state 37
    N_SINGLE_ELEMENT     go to state 38
    N_ENTIRE_VAR         go to state 39


State 41

   35 N_INDEX: T_LBRACKET . T_LBRACKET N_EXPR T_RBRACKET T_RBRACKET
   81 N_SINGLE_ELEMENT: T_IDENT T_LBRACKET . T_LBRACKET N_EXPR T_RBRACKET T_RBRACKET

    T_LBRACKET  shift, and go to state 80


State 42

   34 N_ASSIGNMENT_EXPR: T_IDENT N_INDEX . T_EQ N_EXPR

    T_EQ  shift, and go to state 81


State 43

   22 N_IF_EXPR: T_IF T_LPAREN . N_EXPR T_RPAREN N_EXPR
   23          | T_IF T_LPAREN . N_EXPR T_RPAREN N_EXPR T_ELSE N_EXPR

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    N_EXPR               go to state 82
    N_CONST              go to state 21
    N_COMPOUND_EXPR      go to state 22
    N_IF_EXPR            go to state 23
    N_WHILE_EXPR         go to state 24
    N_FOR_EXPR           go to state 25
    N_LIST_EXPR          go to state 26
    N_ASSIGNMENT_EXPR    go to state 27
    N_QUIT_EXPR          go to state 28
    N_OUTPUT_EXPR        go to state 29
    N_INPUT_EXPR         go to state 30
    N_FUNCTION_DEF       go to state 31
    N_FUNCTION_CALL      go to state 32
    N_ARITHLOGIC_EXPR    go to state 33
    N_SIMPLE_ARITHLOGIC  go to state 34
    N_TERM               go to state 35
    N_FACTOR             go to state 36
    N_VAR                go to state 37
    N_SINGLE_ELEMENT     go to state 38
    N_ENTIRE_VAR         go to state 39


State 44

   24 N_WHILE_EXPR: T_WHILE T_LPAREN . N_EXPR T_RPAREN N_LOOP_EXPR

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    N_EXPR               go to state 83
    N_CONST              go to state 21
    N_COMPOUND_EXPR      go to state 22
    N_IF_EXPR            go to state 23
    N_WHILE_EXPR         go to state 24
    N_FOR_EXPR           go to state 25
    N_LIST_EXPR          go to state 26
    N_ASSIGNMENT_EXPR    go to state 27
    N_QUIT_EXPR          go to state 28
    N_OUTPUT_EXPR        go to state 29
    N_INPUT_EXPR         go to state 30
    N_FUNCTION_DEF       go to state 31
    N_FUNCTION_CALL      go to state 32
    N_ARITHLOGIC_EXPR    go to state 33
    N_SIMPLE_ARITHLOGIC  go to state 34
    N_TERM               go to state 35
    N_FACTOR             go to state 36
    N_VAR                go to state 37
    N_SINGLE_ELEMENT     go to state 38
    N_ENTIRE_VAR         go to state 39


State 45

   41 N_FUNCTION_DEF: T_FUNCTION T_LPAREN . N_PARAM_LIST T_RPAREN N_COMPOUND_EXPR

    T_IDENT  shift, and go to state 84

    $default  reduce using rule 44 (N_NO_PARAMS)

    N_PARAM_LIST  go to state 85
    N_NO_PARAMS   go to state 86
    N_PARAMS      go to state 87


State 46

   25 N_FOR_EXPR: T_FOR T_LPAREN . T_IDENT T_IN N_EXPR T_RPAREN N_LOOP_EXPR

    T_IDENT  shift, and go to state 88


State 47

   37 N_QUIT_EXPR: T_QUIT T_LPAREN . T_RPAREN

    T_RPAREN  shift, and go to state 89


State 48

   38 N_OUTPUT_EXPR: T_PRINT T_LPAREN . N_EXPR T_RPAREN

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    N_EXPR               go to state 90
    N_CONST              go to state 21
    N_COMPOUND_EXPR      go to state 22
    N_IF_EXPR            go to state 23
    N_WHILE_EXPR         go to state 24
    N_FOR_EXPR           go to state 25
    N_LIST_EXPR          go to state 26
    N_ASSIGNMENT_EXPR    go to state 27
    N_QUIT_EXPR          go to state 28
    N_OUTPUT_EXPR        go to state 29
    N_INPUT_EXPR         go to state 30
    N_FUNCTION_DEF       go to state 31
    N_FUNCTION_CALL      go to state 32
    N_ARITHLOGIC_EXPR    go to state 33
    N_SIMPLE_ARITHLOGIC  go to state 34
    N_TERM               go to state 35
    N_FACTOR             go to state 36
    N_VAR                go to state 37
    N_SINGLE_ELEMENT     go to state 38
    N_ENTIRE_VAR         go to state 39


State 49

   39 N_OUTPUT_EXPR: T_CAT T_LPAREN . N_EXPR T_RPAREN

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    N_EXPR               go to state 91
    N_CONST              go to state 21
    N_COMPOUND_EXPR      go to state 22
    N_IF_EXPR            go to state 23
    N_WHILE_EXPR         go to state 24
    N_FOR_EXPR           go to state 25
    N_LIST_EXPR          go to state 26
    N_ASSIGNMENT_EXPR    go to state 27
    N_QUIT_EXPR          go to state 28
    N_OUTPUT_EXPR        go to state 29
    N_INPUT_EXPR         go to state 30
    N_FUNCTION_DEF       go to state 31
    N_FUNCTION_CALL      go to state 32
    N_ARITHLOGIC_EXPR    go to state 33
    N_SIMPLE_ARITHLOGIC  go to state 34
    N_TERM               go to state 35
    N_FACTOR             go to state 36
    N_VAR                go to state 37
    N_SINGLE_ELEMENT     go to state 38
    N_ENTIRE_VAR         go to state 39


State 50

   40 N_INPUT_EXPR: T_READ T_LPAREN . N_VAR T_RPAREN

    T_IDENT  shift, and go to state 52

    N_VAR             go to state 92
    N_SINGLE_ELEMENT  go to state 38
    N_ENTIRE_VAR      go to state 39


State 51

   31 N_LIST_EXPR: T_LIST T_LPAREN . N_CONST_LIST T_RPAREN

    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_STRCONST    shift, and go to state 15

    N_CONST       go to state 93
    N_CONST_LIST  go to state 94


State 52

   81 N_SINGLE_ELEMENT: T_IDENT . T_LBRACKET T_LBRACKET N_EXPR T_RBRACKET T_RBRACKET
   82 N_ENTIRE_VAR: T_IDENT .

    T_LBRACKET  shift, and go to state 95

    T_LBRACKET  [reduce using rule 82 (N_ENTIRE_VAR)]
    $default    reduce using rule 82 (N_ENTIRE_VAR)


State 53

   64 N_FACTOR: T_NOT N_FACTOR .

    $default  reduce using rule 64 (N_FACTOR)


State 54

   63 N_FACTOR: T_LPAREN N_EXPR . T_RPAREN

    T_RPAREN  shift, and go to state 96


State 55

   19 N_COMPOUND_EXPR: T_LBRACKET N_EXPR . N_EXPR_LIST T_RBRACKET

    T_IDENT       shift, and go to state 1
    T_INTCONST    shift, and go to state 2
    T_FLOATCONST  shift, and go to state 3
    T_IF          shift, and go to state 4
    T_WHILE       shift, and go to state 5
    T_FUNCTION    shift, and go to state 6
    T_FOR         shift, and go to state 7
    T_TRUE        shift, and go to state 8
    T_FALSE       shift, and go to state 9
    T_QUIT        shift, and go to state 10
    T_PRINT       shift, and go to state 11
    T_CAT         shift, and go to state 12
    T_READ        shift, and go to state 13
    T_LIST        shift, and go to state 14
    T_STRCONST    shift, and go to state 15
    T_NOT         shift, and go to state 16
    T_LPAREN      shift, and go to state 17
    T_LBRACKET    shift, and go to state 18

    $default  reduce using rule 21 (N_EXPR_LIST)
